<resources>
    <string name="app_name">MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rate">Rate</string>
    <string name="overview">Overview</string>
    <string name="date">Date</string>
    <string name="movie_name">Movie Name</string>
    <string name="trend_movies">Trend Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="tag">TAG</string>
    <string name="_10">10</string>
    <string name="movieNotFoundMessage">No match found</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="genre">Genre</string>
    <string name="release_date">Release Date</string>
    <string name="imdb">IMDB</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="popular_tv_series">Popular TV Series</string>
    <string name="latest_tv_series">Latest TV Series</string>
    <string name="top_rated_tv_series">Top Rated TV Series</string>
    <string name="unknown">Unknown</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="change_password">Change password</string>
    <string name="my_list">My list</string>
    <string name="movie">Movie</string>
    <string name="tv_series">TV Series</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm">Confirm</string>
    <string name="todo">TODO</string>
    <string name="trueText">true</string>
    <string name="falseText">false</string>
    <string name="sign_up_now">New to MovieApp? Sign up now.</string>
    <string name="membership">Membership</string>
    <string name="hello">Hello!</string>
    <string name="my_membership">My membership</string>
    <string name="fullname">Fullname</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>

</resources>